// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all apis registerFieldMiddleware 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
<<<<<<< HEAD
    "path": "aa",
=======
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis registerFormField 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
<<<<<<< HEAD
    "path": "aa",
=======
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis registerVirtualBox 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
<<<<<<< HEAD
=======
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "cc.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
  "cc": Object {
    "display": true,
    "displayName": "VirtualFieldState",
    "initialized": true,
<<<<<<< HEAD
    "mounted": true,
    "name": "cc",
    "path": "cc",
=======
    "mounted": false,
    "name": "cc",
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
    "props": Object {
      "type": "object",
      "x-component": "box",
    },
    "unmounted": false,
    "visible": true,
  },
  "cc.aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
<<<<<<< HEAD
    "name": "aa",
    "path": "cc.aa",
=======
    "name": "cc.aa",
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;
